--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@babel/plugin-proposal-function-bind": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
-    "@babel/register": "^7.8.3"
+    "@babel/register": "^7.8.3",
+    "bluebird": "^3.7.2",
+    "highland": "^2.13.5",
+    "lodash": "^4.17.15"
   }
 }
