--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/register": "^7.8.3",
     "bluebird": "^3.7.2",
     "highland": "^2.13.5",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "string-hash": "^1.1.3"
   }
 }
