--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "string-hash": "^1.1.3"
   },
   "devDependencies": {
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
+    "should": "^13.2.3"
   }
 }
