--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@babel/preset-react": "^7.8.3",
     "@babel/register": "^7.8.3",
     "bluebird": "^3.7.2",
+    "command-line-args": "^5.1.1",
+    "command-line-usage": "^6.1.0",
     "highland": "^2.13.5",
     "highland-concurrent-flatmap": "^1.0.0",
     "lodash": "^4.17.15",
