--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-react": "^7.8.3",
     "@babel/register": "^7.8.3",
     "bluebird": "^3.7.2",
+    "cli-progress": "^3.7.0",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.1.0",
     "highland": "^2.13.5",
